# pakman_plus

./: README-pakman_plus.md
concurrent_kmer_paper/data/: create_final_result_table.pl  create_profile_table.pl  final_result_table.tex  final_result_table_black_bear.tex  final_result_table_elephant.tex  profile_table_1billion.tex
concurrent_kmer_paper/data/0803_753PM_multi_batch_1G_experiments_08032023/: create_final_result_table.pl  create_profile_table.pl  extract_data_pakman_concurrent.pl  multi_batch_1G_results_080323.csv  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.128-7565.0.err  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.128-7565.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.16-7556.0.err  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.16-7556.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.224-7568.0.err  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.224-7568.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.32-7559.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.4-7550.0.err  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.4-7550.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.64-7562.0.err  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.64-7562.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v0.8-7553.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v1.128-7566.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v1.16-7557.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v1.224-7569.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v1.32-7560.0.err  pakman.chimp.AACZ00.100m.concurrent-kmer.v1.32-7560.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v1.4-7551.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v1.64-7563.0.out  pakman.chimp.AACZ00.100m.concurrent-kmer.v1.8-7554.0.err  pakman.chimp.AACZ00.100m.concurrent-kmer.v1.8-7554.0.out  pakman.chimp.AACZ00.100m.default.128-7564.0.err  pakman.chimp.AACZ00.100m.default.128-7564.0.out  pakman.chimp.AACZ00.100m.default.16-7555.0.err  pakman.chimp.AACZ00.100m.default.16-7555.0.out  pakman.chimp.AACZ00.100m.default.224-7567.0.err  pakman.chimp.AACZ00.100m.default.224-7567.0.out  pakman.chimp.AACZ00.100m.default.32-7558.0.err  pakman.chimp.AACZ00.100m.default.32-7558.0.out  (+77 more)
includes/: distribute_kmers.h  kmer.h  stop_clock.hpp
src/: CMakeLists.txt  asynchronous_distributed_kmer_counting.hpp  build_pakgraph.hpp  concurrent_kmer_counter.hpp  concurrent_kmer_counter_test.cpp  concurrent_kmer_table_builder.cpp  default_kmer_table_builder.cpp  default_pakgraph_builder.cpp  distribute_kmers.cpp  distributed_integer_sort.hpp  distributed_record_partition_iterator.hpp  dynamic_sparse_message_exchange_protocol.hpp  dynamic_sparse_message_exchange_protocol_test.cpp  extract_data_concurrent_kmer_builder.pl  extract_data_pakman_concurrent.pl  generate_kmers.hpp  graph_traits.hpp  input_reading.cpp  iterative_compaction.cpp  kmer_counting.cpp  kmer_traits.hpp  merge_mn.cpp  mn_construct.cpp  most_significant_record_bit_and_byte.hpp  mpi_rank_traits.hpp  pakgraph.hpp  pakman_graph.hpp  record_traits.hpp  run_experiments_concurrent_kmer_builder.pl  run_unit_test.cpp  unit_testing_utils.hpp
(+167 files in other folders)
